@@ -1,6 +1,6 @@
 Date: 2022-02-03
 Package: CHNOSZ
-Version: 1.4.1-18
+Version: 1.4.1-19
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
