@@ -50,7 +50,7 @@ export(
   "nonideal", "uniprot.aa",
 # added 20170301 or later
   "GHS_Tr", "calculateDensity", "calculateGibbsOfWater",
-  "calculateEpsilon", "calculateQ", "water.DEW", "berman",
+  "calculateEpsilon", "calculateQ", "water.DEW", "Berman",
   "bgamma",
 # added 20171121 or later
   "dumpdata", "thermo.axis", "solubility", "NaCl",
